fix light/dark mode toggle switch

--- a/docs/_sass/custom/custom.scss
+++ b/docs/_sass/custom/custom.scss
@@ -76,7 +76,10 @@ pre.highlight {
   }
 
   // All state labels hidden by default; JS shows exactly one
-  .icon-auto,
+  .icon-auto {
+    display: inline;
+  }
+
   .icon-light,
   .icon-dark {
     display: none;
